--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Benedikt Engel",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^20.11.18",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "eslint": "^8.14.0",
@@ -25,5 +26,8 @@
   },
   "files": [
     "lib/**/*"
-  ]
+  ],
+  "dependencies": {
+    "fs": "^0.0.1-security"
+  }
 }
