--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "lint": "node_modules/eslint/bin/eslint.js src/**/*.ts"
+    "lint": "node_modules/eslint/bin/eslint.js src/**/*.ts",
+    "bundle": "browserify -s htmlWebsite2Pdf lib/index.js > dist/bundle.js"
   },
   "author": "Benedikt Engel",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.11.18",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
+    "browserify": "^17.0.0",
     "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -22,12 +24,14 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
+    "typedoc": "^0.25.9",
     "typescript": "^4.6.3"
   },
   "files": [
     "lib/**/*"
   ],
   "dependencies": {
+    "@types/node": "^20.11.24",
     "fontkit": "^2.0.2",
     "fs": "^0.0.1-security"
   }
